tests/ui/syntactically_erroneous_bounds.stderr
error: expected `:`
 --> tests/ui/syntactically_erroneous_bounds.rs:3:12
  |
3 | #[bounds(T Clone)]
  |            ^^^^^
