tests/ui/syntactically_erroneous_bounds.rs
use attr_bounds::bounds;

#[bounds(T Clone)]
struct Foo<T>(T);

fn main() {}
